# kutor

./: .gitignore  README.md  README.txt  index.html  package.json  pnpm-lock.yaml  skills-lock.json
.backlog/: config.yml
.backlog/tasks/: task-0001 - Fix-Create-Process-button-not-opening-new-window.md  task-0002 - Fix-Cancel-OK-buttons-not-closing-Create-Process-window.md  task-0002 - Fix-Stop-button-not-stopping-running-process.md  task-0003 - Fix-Stop-button-not-stopping-running-process.md  task-0004 - Make-Create-Process-window-modal-disable-main-window-interaction.md  task-0005 - Fix-uptime-continuing-after-app-restart-for-stopped-processes.md  task-0006 - Kill-child-processes-on-app-exit.md  task-0007 - Add-PID-column-to-process-table-after-Name-column.md  task-0008 - Fix-main-window-disabled-after-closing-Create-Process-via-X-button.md  task-0009 - Fix-main-window-not-auto-focusing-on-Windows-after-Create-Process-window-closes.md  task-0010 - Add-process-log-viewer-with-conditional-Log-button.md  task-0011 - Fix-process-status-showing-running-when-stopped-due-to-error-or-one-time-execution.md  task-0012 - Fix-window-flicker-when-closing-Create-Process-dialog.md
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  process_manager.rs
src/components/: process-row.tsx  process-table-helpers.tsx  process-table.tsx  sortable-header.tsx
src/hooks/: sort-bridge.test.ts  sort-bridge.ts  use-create-process.ts  (+8 more)
(+15 files in other folders)
